<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:background="@color/gray_500">

            <TextView
                android:id="@+id/kodeMK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/kode_matakuliah"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/nameMK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/nama_matakuliah"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/bobot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/bobot"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/semester"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/semester"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/btn_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.7"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:src="@drawable/ic_more"
                android:text="@string/action"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:contentDescription="@string/action" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ddd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>